objects/adapps__OptimizerPlus_Notes_And_Attach_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Layout_Name__c</fullName>
        <label>Layout Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Notes_And_Attachments__c</fullName>
        <label>Notes And Attachments Related List</label>
        <referenceTo>adapps__OptimizerPlus_Notes_And_Attach__c</referenceTo>
        <relationshipLabel>Notes And Attachments Items</relationshipLabel>
        <relationshipName>Notes_And_Attachments_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Notes And Attachments Item</label>
    <nameField>
        <label>Notes And Attachments Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes And Attachments Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>